// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TocHeading Component > applies custom anchor props 1`] = `
<div>
  <div>
    <div
      class=""
    >
      <div
        class="ant-anchor-wrapper"
        style="max-height: calc(100vh - 100px); background-color: red;"
      >
        <div
          class="ant-anchor"
        >
          <span
            class="ant-anchor-ink"
          />
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#introduction"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Introduction
              </span>
            </a>
            <div
              class="ant-anchor-link"
            >
              <a
                class="ant-anchor-link-title"
                href="#getting-started"
                title=""
              >
                <span
                  style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
                >
                  Getting Started
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TocHeading Component > applies max height and scrollbar styles 1`] = `
<div>
  <div>
    <div
      class=""
    >
      <div
        class="ant-anchor-wrapper"
        style="max-height: min(calc(100vh - 180px), 300px); min-width: 200px; overflow-y: auto; overflow-x: hidden; padding-right: 4px;"
      >
        <div
          class="ant-anchor"
        >
          <span
            class="ant-anchor-ink"
          />
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-1"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 1
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-2"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 2
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-3"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 3
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-4"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 4
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-5"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 5
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-6"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 6
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-7"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 7
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-8"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 8
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-9"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 9
              </span>
            </a>
          </div>
          <div
            class="ant-anchor-link"
          >
            <a
              class="ant-anchor-link-title"
              href="#section-10"
              title=""
            >
              <span
                style="max-width: 200px; display: inline-block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; font-size: 14px;"
              >
                Section 10
              </span>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
